[package]
name = "alloy-trie"
version = "0.6.0"
authors = [
    "rkrasiuk <rokrassyuk@gmail.com>",
    "gakonst <me@gakonst.com>",
    "DaniPopes <57450786+DaniPopes@users.noreply.github.com>",
]
description = """
Fast Merkle-Patricia Trie (MPT) state root calculator
and proof generator for prefix-sorted nibbles
"""
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]
keywords = ["nibbles", "trie", "mpt", "merkle", "ethereum"]
homepage = "https://github.com/alloy-rs/trie"
repository = "https://github.com/alloy-rs/trie"
exclude = [".github/", "deny.toml", "release.toml", "rustfmt.toml"]

[dependencies]
alloy-primitives = { version = "0.8.5", default-features = false, features = [
    "rlp",
    "map",
] }
alloy-rlp = { version = "0.3.8", default-features = false, features = [
    "derive",
    "arrayvec"
] }

alloy-consensus = { version = "0.3.6", default-features = false }
alloy-genesis = { version = "0.3.6", default-features = false }


arrayvec = { version = "0.7", default-features = false }
derive_more = { version = "1", default-features = false, features = [
    "add",
    "add_assign",
    "deref",
    "from",
    "not",
] }
nybbles = { version = "0.2", default-features = false }
smallvec = { version = "1.0", default-features = false, features = [
    "const_new",
] }
tracing = { version = "0.1", default-features = false }

# serde
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }


# reth
revm-primitives = "10.0.0"
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives-traits", tag = "v1.0.8" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", package = "reth-codecs", tag = "v1.0.8" }

# arbitrary
arbitrary = { version = "1.3", optional = true }
derive_arbitrary = { version = "1.3", optional = true }
proptest = { version = "1.5", optional = true }
proptest-derive = { version = "0.5", optional = true }

# misc
bytes = "1.5"
itertools = "0.13"

# `test-utils` feature
hash-db = { version = "=0.15.2", optional = true }
plain_hasher = { version = "0.2", optional = true }


[dev-dependencies]
hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8.4"
criterion = "0.5"

[features]
default = ["std", "alloy-primitives/default", "serde"]
std = [
    "alloy-primitives/std",
    "alloy-rlp/std",
    "arrayvec/std",
    "derive_more/std",
    "nybbles/std",
    "tracing/std",
    "serde?/std",
]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "arrayvec/serde",
    "nybbles/serde",
]
arbitrary = [
    "std",
    "dep:arbitrary",
    "dep:derive_arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
    "alloy-primitives/arbitrary",
    "nybbles/arbitrary",
]
test-utils = ["dep:plain_hasher", "dep:hash-db", "arbitrary"]


[[bench]]
name = "bench"
harness = false
required-features = ["arbitrary"]
