[package]
name = "alloy-trie"
version = "0.9.4"
authors = [
    "rkrasiuk <rokrassyuk@gmail.com>",
    "gakonst <me@gakonst.com>",
    "DaniPopes <57450786+DaniPopes@users.noreply.github.com>",
]
description = """
Fast Merkle-Patricia Trie (MPT) state root calculator
and proof generator for prefix-sorted nibbles
"""
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]
keywords = ["nibbles", "trie", "mpt", "merkle", "ethereum"]
homepage = "https://github.com/alloy-rs/trie"
repository = "https://github.com/alloy-rs/trie"
exclude = [".github/", "deny.toml", "release.toml", "rustfmt.toml"]

[lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[lints.rustdoc]
all = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
redundant-clone = "warn"
result_large_err = "allow"

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[dependencies]
alloy-primitives = { version = "1.0", default-features = false, features = [
    "rlp",
    "map",
] }
alloy-rlp = { version = "0.3.9", default-features = false, features = [
    "derive",
    "arrayvec",
    "core-net",
    "core-error"
] }

derive_more = { version = "2", default-features = false, features = [
    "add",
    "add_assign",
    "deref",
    "from",
    "not",
] }
thiserror = { version = "2", default-features = false }
nybbles = { version = "0.4", default-features = false }
smallvec = { version = "1.0", default-features = false, features = [
    "const_new",
] }
tracing = { version = "0.1", default-features = false }

# serde
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
], optional = true }

# arbitrary
arbitrary = { version = "1.3", optional = true }
derive_arbitrary = { version = "1.3", optional = true }
proptest = { version = "1.5", optional = true }
proptest-derive = { version = "0.7", optional = true }

[dev-dependencies]
hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8.4"
criterion = { version = "4.3", package = "codspeed-criterion-compat" }

[features]
default = ["std", "alloy-primitives/default"]
std = [
    "alloy-primitives/std",
    "alloy-rlp/std",
    "derive_more/std",
    "nybbles/std",
    "thiserror/std",
    "tracing/std",
    "serde?/std",
]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "nybbles/serde",
]
arbitrary = [
    "std",
    "dep:arbitrary",
    "dep:derive_arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
    "alloy-primitives/arbitrary",
    "nybbles/arbitrary",
]
ethereum = []

[[bench]]
name = "bench"
harness = false
required-features = ["arbitrary"]
